@@ -955,4 +955,5 @@ started these clone on 12th of July, 2019
 [uuk]: dimension -1 (nether) and 1 (end) is now reserved by default
 [uuk]: removed deprecated loading phases
 [uuk]: removed features.py
+[uuk]: when closing game window, game will now be saved automatically
 
