@@ -5,6 +5,7 @@ changelog of master-branch
     - added dimension definition for nether and end
     - removed deprecated loading phases
     - removed features.py as it was outdated
+    - world is now saved when window is closed (only when in the state)
 
 
 changelog of snapshot 20w12a [released on 16.03.2020]
